--- a/VN.Address/VN.Address.csproj
+++ b/VN.Address/VN.Address.csproj
@@ -6,13 +6,13 @@
         <Nullable>enable</Nullable>
 
         <PackageId>VN.Address</PackageId>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>NhanTran</Authors>
 
         <Description>A lightweight and high-performance library for validating Vietnam administrative addresses (Provinces/Wards) based on 2025 data.</Description>
 
         <PackageTags>vietnam;address;provinces;wards;2025;validator</PackageTags>
-        <RepositoryUrl>https://github.com/yourusername/VN.Address2025</RepositoryUrl>
+        <RepositoryUrl>https://github.com/TranNhan2004/VN.Address</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
 
         <PackageReadmeFile>README.md</PackageReadmeFile>
